force-app/main/default/objects/Coupon__c/fields/Categorie__c.field-meta.xml
<CustomField>
    <fullName>Categorie__c</fullName>
    <label>Categorie</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTOC</fullName>
            </value>
            <value>
                <fullName>BTOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>