force-app/main/default/objects/Coupon__c/fields/DateFin__c.field-meta.xml
<CustomField>
    <fullName>DateFin__c</fullName>
    <label>Date Fin</label>
    <type>Date</type>
</CustomField>