force-app/main/default/objects/Coupon__c/fields/InclureChiffres__c.field-meta.xml
<CustomField>
    <fullName>InclureChiffres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inclure des chiffres</label>
    <type>Checkbox</type>
</CustomField>