force-app/main/default/objects/Coupon__c/fields/NombreCaracteres__c.field-meta.xml
<CustomField>
    <fullName>NombreCaracteres__c</fullName>
    <label>Nombre de caracteres</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>