force-app/main/default/objects/Coupon__c/fields/Prefixe__c.field-meta.xml
<CustomField>
    <fullName>Prefixe__c</fullName>
    <label>Prefixe</label>
    <length>10</length>
    <type>Text</type>
</CustomField>