force-app/main/default/objects/Coupon__c/fields/PrixVente__c.field-meta.xml
<CustomField>
    <fullName>PrixVente__c</fullName>
    <label>Prix de vente</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>