force-app/main/default/objects/Coupon__c/fields/Quantite__c.field-meta.xml
<CustomField>
    <fullName>Quantite__c</fullName>
    <label>Quantite</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>