force-app/main/default/objects/Coupon__c/fields/QuantiteDisponible__c.field-meta.xml
<CustomField>
    <fullName>QuantiteDisponible__c</fullName>
    <formula>Quantite__c -  QuantiteUtilise__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantite Disponible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>