force-app/main/default/objects/Coupon__c/fields/QuantiteItemDisponible__c.field-meta.xml
<CustomField>
    <fullName>QuantiteItemDisponible__c</fullName>
    <label>QuantiteItemDisponible</label>
    <summaryFilterItems>
        <field>CouponItem__c.Utilise__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>CouponItem__c.Coupon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>