force-app/main/default/objects/Coupon__c/fields/QuantiteUtilise__c.field-meta.xml
<CustomField>
    <fullName>QuantiteUtilise__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantite Utilisée</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>