force-app/main/default/objects/Coupon__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Usage unique
Usage multiple
Plusieurs usages uniques</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usage unique</fullName>
            </value>
            <value>
                <fullName>Generique</fullName>
            </value>
            <value>
                <fullName>Multiples</fullName>
            </value>
            <value>
                <fullName>BtoB</fullName>
            </value>
            <value>
                <fullName>NominatifClient</fullName>
                <label>Nominatif Client</label>
            </value>
            <value>
                <fullName>Nominatif Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>