force-app/main/default/objects/Coupon__c/recordTypes/BtoCGenerique.recordType-meta.xml
<RecordType>
    <fullName>BtoCGenerique</fullName>
    <active>true</active>
    <label>BtoC generique</label>
</RecordType>