force-app/main/default/objects/Coupon__c/recordTypes/BtoCNominatifAgent.recordType-meta.xml
<RecordType>
    <fullName>BtoCNominatifAgent</fullName>
    <active>true</active>
    <label>BtoC Nominatif Agent</label>
</RecordType>