force-app/main/default/objects/Coupon__c/recordTypes/BtoCNominatifClient.recordType-meta.xml
<RecordType>
    <fullName>BtoCNominatifClient</fullName>
    <active>true</active>
    <label>BtoC Nominatif Client</label>
</RecordType>