force-app/main/default/objects/Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Categorie__c</columns>
    <columns>Type__c</columns>
    <columns>DateDebut__c</columns>
    <columns>DateFin__c</columns>
    <columns>Quantite__c</columns>
    <columns>QuantiteDisponible__c</columns>
    <columns>QuantiteUtilise__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>