force-app/main/default/objects/Coupon__c/listViews/B2B.listView-meta.xml
<ListView>
    <fullName>B2B</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Prefixe__c</columns>
    <columns>Quantite__c</columns>
    <columns>QuantiteItemUtilise__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>RECORDTYPE</columns>
    <columns>QuantiteItemDisponible__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coupon__c.BtoB</value>
    </filters>
    <label>B2B</label>
</ListView>