force-app/main/default/objects/Coupon__c/listViews/BtoC_nominatif_agent.listView-meta.xml
<ListView>
    <fullName>BtoC_nominatif_agent</fullName>
    <columns>NAME</columns>
    <columns>QuantiteItemUtilise__c</columns>
    <columns>QuantiteItemDisponible__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coupon__c.BtoCNominatifAgent</value>
    </filters>
    <label>BtoC nominatif agent</label>
</ListView>