force-app/main/default/objects/Coupon__c/listViews/BtoC_plusieurs_usage_unique.listView-meta.xml
<ListView>
    <fullName>BtoC_plusieurs_usage_unique</fullName>
    <columns>NAME</columns>
    <columns>QuantiteItemUtilise__c</columns>
    <columns>QuantiteItemDisponible__c</columns>
    <columns>DateDebut__c</columns>
    <columns>DateFin__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coupon__c.BtoCMultiples</value>
    </filters>
    <label>BtoC multiples</label>
</ListView>