force-app/main/default/objects/Coupon__c/listViews/BtoC_usage_multiple.listView-meta.xml
<ListView>
    <fullName>BtoC_usage_multiple</fullName>
    <columns>NAME</columns>
    <columns>Quantite__c</columns>
    <columns>QuantiteUtilise__c</columns>
    <columns>QuantiteDisponible__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Coupon__c.BtoCGenerique</value>
    </filters>
    <label>BtoC generique</label>
</ListView>